added access token

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 BOT_ID="a21e21fd61d4c6a0d8b837d419"
 GROUP_ID="50207315"
+ACCESS_TOKEN="Bz27bYtd8fOQKVteFRGYViBXJ6jHBd19k2sfwfom"
 BASE_URL="https://api.groupme.com/"
